--- a/assets/style.css
+++ b/assets/style.css
@@ -1,48 +1,64 @@
+    
+body, html{
+    height: 100%;
+    margin: 0;
+    font: 400 15px/1.8 "Lato", sans-serif;
+    color: #777
+}
 
-.parallax { 
-  /* The image used */
-  background-image: url("../images/background4.jpeg");
-
-  /* Set a specific height */
-  height: 500px; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    position: relative;
+    opacity: 0.65;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
-/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
-@media only screen and (max-device-width: 1366px) {
-    .parallax {
-      background-attachment: scroll;
+.bgimg-1 {
+    background-image: url("../assets/images/landpage.gif");
+    min-height: 600px;
+}
+
+.bgimg-2 {
+    background-image: url("../assets/images/background4.jpeg");
+    min-height: 400px;
+}
+
+.bgimg-3 {
+    background-image: url("../assets/images/background6.jpg");
+    min-height: 400px;
+}
+
+
+.caption {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #000;
+}
+
+.caption span.border {
+    background-color: #111;
+    color: #fff;
+    padding: 18px;
+    font-size: 25px;
+    letter-spacing: 10px;
+}
+
+h3 {
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font: 20px "Lato, sans-serif";
+    color: #111;
+}
+
+@media only screen and (max-device-width:1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3{
+        background-attachment: scroll;
     }
-  }
-
-
-#intro-image{
-    background-image: url("../assets/images/background4.jpg");
-    background-position:center;
-    opacity: 0.94;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: rgb(229, 243, 190);
-    min-height: 100%;
-    z-index: 20;
-
-} 
-
-#about-me{
-    background-image: url("../assets/images/background5.jpeg");
-    background-position:center;
-    /* opacity: 0.94; */
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: rgb(238, 228, 228);
-    min-height: 115%;
-    z-index: 20; */
 }
+
